src/objects/Invoice__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Invoice</relationshipLabel>
        <relationshipName>Invoice</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Invoice_End_Date__c</fullName>
        <label>Invoice End Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Invoice_Start_Date__c</fullName>
        <label>Invoice Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Invoice</relationshipLabel>
        <relationshipName>Invoice</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Total_Invoice_Amount__c</fullName>
        <label>Total Invoice Amount</label>
        <summarizedField>Invoice_Line_Items__c.Invoice_Amount__c</summarizedField>
        <summaryForeignKey>Invoice_Line_Items__c.Invoice__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Invoice_Hrs__c</fullName>
        <label>Total Invoice Hrs</label>
        <summarizedField>Invoice_Line_Items__c.Invoice_Hrs__c</summarizedField>
        <summaryForeignKey>Invoice_Line_Items__c.Invoice__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Invoice</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Invoice</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>